Updated VC photo, added last updated date, and removed hiring poster

--- a/index.html
+++ b/index.html
@@ -1070,7 +1070,7 @@ Activities</a></li>
               <a href="https://in.linkedin.com/in/sameerah-ali-bava-359a55174" target="_blank" rel="noopener noreferrer">
               <div class="team-item wow fadeInUp" data-wow-delay=".75s">
                 <div class="team-img">
-                  <img src="https://mdcrc.edu.in/upload/vcp.jpg" alt="thumb" />
+                  <img src="./assets/img/team/VCP.jpg" alt="thumb" />
                 </div>
                 <!-- <div class="team-social">
                   <a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -1885,7 +1885,7 @@ Activities</a></li>
         </div>
       </div>
       
-      <div class="careers-area py-120" id="careers">
+      <!-- <div class="careers-area py-120" id="careers">
         <div class="container">
           <div class="row">
             <div class="col-lg-6 mx-auto">
@@ -1896,13 +1896,6 @@ Activities</a></li>
             </div>
           </div>
           <div class="row">
-            <!-- <div class="col-md-4 mb-4">
-              <div class="career-item">
-                <div class="career-img">
-                  <img src="assets/img/careers/career_1.jpg" alt="Career Image 1" style="border-radius: 10px;" />
-                </div>
-              </div>
-            </div> -->
             <div class="col-md-4 mb-4">
               <div class="career-item">
                 <div class="career-img">
@@ -1927,7 +1920,7 @@ Activities</a></li>
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
       
       <div class="contact-map">
         <iframe
@@ -2073,10 +2066,10 @@ Activities</a></li>
         <div class="container">
           <div class="copyright-wrapper">
             <div class="row">
-              <div class="col-md-6 align-self-center">
+              <div class="col-md-6 align-self-center"><span>Last updated on 19-07-2024</span>
                 <p class="copyright-text">
                   &copy; Copyright <span id="date"></span>
-                  <a href="#">Edentu Pvt Ltd</a> All Rights Reserved.
+                  <a href="https://connect.edentu.com/">Edentu Pvt Ltd</a> All Rights Reserved.
                 </p>
               </div>
               <div class="col-md-6 align-self-center">
