Removed footr logo

--- a/index.html
+++ b/index.html
@@ -1940,15 +1940,15 @@ Activities</a></li>
           <div class="row footer-widget-wrapper pt-100 pb-70">
             <div class="col-md-6 col-lg-4">
               <div class="footer-widget-box about-us">
-                <a href="/" class="footer-logo">
-                  <!-- <img src="assets/img/logo/logo.png" alt /> -->
+                <!-- <a href="/" class="footer-logo">
                   <span style="font-size: larger; color: #125875; font-weight: bolder;">Malabar College of Pharmacy</span>
-                </a>
-                <p class="mb-3">
+                </a> -->
+                <!-- <p class="mb-3">
                   We are many variations of passages available but the majority
                   have suffered alteration in some form by injected humour words
                   believable.
-                </p>
+                </p> -->
+                <h4 class="footer-widget-title">Contact Us</h4>
                 <ul class="footer-contact">
                   <li>
                     <a href="tel:+917034555559"
