--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@ Activities</a></li>
         <div class="hero-slider owl-carousel owl-theme">
           <div
             class="hero-single"
-            style="background: url(assets/img/slider/slider-1.jpg)"
+            style="background: url(assets/img/slider/mcpAi.png)"
           >
             <div class="container">
               <div class="row align-items-center">
@@ -533,7 +533,7 @@ Activities</a></li>
             <div class="col-lg-6">
               <div class="about-left wow fadeInLeft" data-wow-delay=".25s">
                 <div class="about-img">
-                  <img src="./assets/img/about/01.jpg" alt="" />
+                  <img src="./assets/img/slider/mcpAi.png" alt="" />
                 </div>
                 <div class="about-experience">
                   <div class="about-experience-icon">
