--- a/index.html
+++ b/index.html
@@ -122,6 +122,30 @@
                 <li class="nav-item dropdown">
                   <a class="nav-link" href="#about-us">About Us</a>
                 </li>
+                
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="" data-bs-toggle="dropdown">Admission</a>
+                  <ul class="dropdown-menu fade-down">
+                        <li><a class="dropdown-item" href="admission.html">Admission</a></li>
+                        <li><a class="dropdown-item" href="/assets/docs/MALABAR COLLEGE OF PROSPECTUS (2024-25).pdf" target="_blank" rel="noopener noreferrer">Prospects</a></li>
+                  </ul>
+                </li>
+
+
+                <!-- <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#careers" data-bs-toggle="dropdown">Admission</a>
+                  <ul class="dropdown-menu fade-down">
+                    <li class="dropdown-submenu">
+                      <a class="dropdown-item dropdown-toggle" href="#" data-bs-toggle="dropdown">Prospects</a>
+                      <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="index-2.html">Home Page 01</a></li>
+                        <li><a class="dropdown-item" href="index-3.html">Home Page 02</a></li>
+                        <li><a class="dropdown-item" href="index-4.html">Home Page 03</a></li>
+                      </ul>
+                    </li>
+                  </ul>
+                </li> -->
+
 
                 <li class="nav-item dropdown">
                   <a class="nav-link" href="#courses">Courses</a>
@@ -299,21 +323,21 @@ Activities</a></li>
                   <a class="nav-link" href="#contact-us">Contact</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#careers">Careers</a>
+                  <a class="nav-link" href="/careers.html">Careers</a>
                 </li>
               </ul>
-              <!-- <div class="nav-right">
-                <div class="search-btn">
+              <div class="nav-right">
+                <!-- <div class="search-btn">
                   <button type="button" class="nav-right-link search-box-outer">
                     <i class="far fa-search"></i>
                   </button>
-                </div>
+                </div> -->
                 <div class="nav-right-btn mt-2">
-                  <a href="application-form.html" class="theme-btn"
+                  <a href="apply.html" class="theme-btn"
                     ><span class="fal fa-pencil"></span>Apply Now</a
                   >
                 </div>
-              </div> -->
+              </div>
             </div>
           </div>
         </nav>
@@ -526,6 +550,9 @@ Activities</a></li>
           </div>
         </div>
       </div> -->
+      <div class="marquee">
+        <a href="admission.html">Admissions Now Open for the New Academic Year – Click Here to Apply and Learn More About Our Programs!</a>
+      </div>
 
       <div class="about-area py-120" id="about-us">
         <div class="container">
@@ -976,7 +1003,7 @@ Activities</a></li>
             <div class="col-lg-6 mx-auto">
               <div class="site-heading text-center">
                 <span class="site-title-tagline"
-                  ><i class="far fa-book-open-reader"></i> Our Team</span
+                  ><i class="far fa-book-open-reader"></i> Our Principal</span
                 >
                 <div class="d-flex justify-content-center" style="margin-top: 20px;">
                   <div class="text-center">
@@ -2066,7 +2093,7 @@ Activities</a></li>
         <div class="container">
           <div class="copyright-wrapper">
             <div class="row">
-              <div class="col-md-6 align-self-center"><span>Last updated on 19-07-2024</span>
+              <div class="col-md-6 align-self-center"><span>Last updated on 08-11-2024</span>
                 <p class="copyright-text">
                   &copy; Copyright <span id="date"></span>
                   <a href="https://connect.edentu.com/">Edentu Pvt Ltd</a> All Rights Reserved.
