--- a/careers.html
+++ b/careers.html
@@ -97,7 +97,7 @@
                   <a class="nav-link dropdown-toggle" href="" data-bs-toggle="dropdown">Admission</a>
                   <ul class="dropdown-menu fade-down">
                         <li><a class="dropdown-item" href="admission.html">Admission</a></li>
-                        <li><a class="dropdown-item" href="/assets/docs/MALABAR COLLEGE OF PROSPECTUS (2024-25).pdf" target="_blank" rel="noopener noreferrer">Prospects</a></li>
+                        <li><a class="dropdown-item" href="/prospectus2024.html" target="_blank" rel="noopener noreferrer">Prospects</a></li>
                   </ul>
                 </li>
                 <li class="nav-item dropdown">
