--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                   <a class="nav-link dropdown-toggle" href="" data-bs-toggle="dropdown">Admission</a>
                   <ul class="dropdown-menu fade-down">
                         <li><a class="dropdown-item" href="admission.html">Admission</a></li>
-                        <li><a class="dropdown-item" href="/assets/docs/MALABAR COLLEGE OF PROSPECTUS (2024-25).pdf" target="_blank" rel="noopener noreferrer">Prospects</a></li>
+                        <li><a class="dropdown-item" href="/prospectus2024.html" target="_blank" rel="noopener noreferrer">Prospects</a></li>
                   </ul>
                 </li>
 
@@ -552,6 +552,10 @@ Activities</a></li>
       </div> -->
       <div class="marquee">
         <a href="admission.html">Admissions Now Open for the New Academic Year – Click Here to Apply and Learn More About Our Programs!</a>
+      </div>
+
+      <div class="notification-bar" style="background-color: #f2f2f2; padding: 10px; text-align: center;">
+        <p style="margin: 0; color: #333;"><strong>Prospectus published!</strong> <a href="/prospectus2024.html" style="color: #0066cc; text-decoration: none; font-weight: bold;">Click here.</a></p>
       </div>
 
       <div class="about-area py-120" id="about-us">
