--- a/apply.html
+++ b/apply.html
@@ -127,7 +127,7 @@
                     <a class="nav-link dropdown-toggle" href="" data-bs-toggle="dropdown">Admission</a>
                     <ul class="dropdown-menu fade-down">
                           <li><a class="dropdown-item" href="admission.html">Admission</a></li>
-                          <li><a class="dropdown-item" href="/prospectus2024.html" target="_blank" rel="noopener noreferrer">Prospects</a></li>
+                          <li><a class="dropdown-item" href="/prospectus2024.html">Prospects</a></li>
                     </ul>
                   </li>
   
