added login register and apply forms

--- a/admission.html
+++ b/admission.html
@@ -333,7 +333,7 @@
                     </button>
                   </div> -->
                   <div class="nav-right-btn mt-2">
-                    <a href="apply.html" class="theme-btn"
+                    <a href="login.html" class="theme-btn"
                       ><span class="fal fa-pencil"></span>Apply Now</a
                     >
                   </div>
@@ -453,7 +453,7 @@
                         <td>Issue of Application</td>
                         <td class="d-flex flex-column flex-md-row justify-content-md-between align-items-start">
                           <span>08.11.2024</span>
-                          <a href="apply.html" class="btn btn-primary mt-2 mt-md-0">Apply Now</a>
+                          <a href="login.html" class="btn btn-primary mt-2 mt-md-0">Apply Now</a>
                         </td>
                       </tr>
                       <tr>
@@ -602,7 +602,7 @@
                   </div>
                 </div>
                 <div class="apply-now-btn mt-4 text-end">
-                  <a href="apply.html" class="theme-btn"
+                  <a href="login.html" class="theme-btn"
                     ><span class="fal fa-pencil"></span>Apply Now</a
                   >
                 </div>
