--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@ Activities</a></li>
                   </button>
                 </div> -->
                 <div class="nav-right-btn mt-2">
-                  <a href="apply.html" class="theme-btn"
+                  <a href="login.html" class="theme-btn"
                     ><span class="fal fa-pencil"></span>Apply Now</a
                   >
                 </div>
