--- a/prospectus2024.html
+++ b/prospectus2024.html
@@ -333,7 +333,7 @@ Activities</a></li>
                   </button>
                 </div> -->
                 <div class="nav-right-btn mt-2">
-                  <a href="apply.html" class="theme-btn"
+                  <a href="login.html" class="theme-btn"
                     ><span class="fal fa-pencil"></span>Apply Now</a
                   >
                 </div>
@@ -348,6 +348,7 @@ Activities</a></li>
     <main style="font-family: Arial, sans-serif; line-height: 1.6; background-color: #f4f4f4; padding: 20px;">
         <div style="max-width: 950px; margin: 0 auto; background-color: #fff; padding: 20px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
             <header style="text-align: center; margin-bottom: 30px;">
+              <img src="assets/img/logo/logo.png" alt="logo" style="width: 200px; height: 200px;">
                 <h1 style="font-size: 2.5em; color: #003366;">Malabar College of Pharmacy</h1>
                 <p style="font-size: 1.2em; color: #666;">Under Malabar Educational and Charitable Trust</p>
                 <p style="font-size: 1.1em; color: #666;">Manoor-Chekanoor Road, Mudur, PO-679578, Edappal, Malappuram, Kerala</p>
