Connected APIs and updated UI components

--- a/forgot-password.html
+++ b/forgot-password.html
@@ -255,15 +255,6 @@
   <li><a class="dropdown-item" href="forgot-password.html">Forgot Password</a>
   </li>
   </ul>
-  </li>
-  <li><a class="dropdown-item" href="pricing.html">Pricing Plan</a></li>
-  <li><a class="dropdown-item" href="faq.html">Faq</a></li>
-  <li><a class="dropdown-item" href="testimonial.html">Testimonials</a></li>
-  <li><a class="dropdown-item" href="404.html">404 Error</a></li>
-  <li><a class="dropdown-item" href="coming-soon.html">Coming Soon</a></li>
-  <li><a class="dropdown-item" href="terms.html">Terms Of Service</a></li>
-  <li><a class="dropdown-item" href="privacy.html">Privacy Policy</a></li>
-  </ul>
   </li> -->
                     <!-- <li class="nav-item dropdown">
   <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Admissions</a>
@@ -383,6 +374,25 @@
                             </div>
                             <div class="d-flex align-items-center">
                                 <button type="submit" class="theme-btn"><i class="far fa-key"></i> Send Reset Link</button>
+                                <div id="forgotPasswordSpinner" style="display: none; margin-left: 10px;">
+                                    <i class="fas fa-spinner fa-spin"></i>
+                                </div>
+                            </div>
+                        </form>
+                        <form id="resetPasswordForm" action="#" style="display: none;">
+                            <div class="form-group">
+                                <label>OTP</label>
+                                <input type="text" class="form-control" placeholder="Enter 6-digit OTP" id="otp" maxlength="6" required>
+                            </div>
+                            <div class="form-group">
+                                <label>New Password</label>
+                                <input type="password" class="form-control" placeholder="New Password" id="newPassword" required>
+                            </div>
+                            <div class="d-flex align-items-center">
+                                <button type="submit" class="theme-btn"><i class="far fa-key"></i> Reset Password</button>
+                                <div id="resetPasswordSpinner" style="display: none; margin-left: 10px;">
+                                    <i class="fas fa-spinner fa-spin"></i>
+                                </div>
                             </div>
                         </form>
                     </div>
@@ -530,14 +540,19 @@
       </footer>
   
       <a href="#" id="scroll-top"><i class="far fa-arrow-up-from-arc"></i></a>
+      <div id="toast" style="position: fixed; top: 20px; right: 20px; min-width: 200px; padding: 10px; border-radius: 5px; display: none; z-index: 1000;"></div>
+
       <script>
         document.getElementById('forgotPasswordForm').addEventListener('submit', function(event) {
             event.preventDefault();
 
-            const email = document.getElementById('email').value;
+            const emailField = document.getElementById('email');
+            const email = emailField.value.trim().toLowerCase();
 
-            if (!email) {
-                alert("Please enter your email address.");
+            // Validate email format
+            const emailPattern = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
+            if (!email || !emailPattern.test(email)) {
+                showToast("Please enter a valid email address.", "error");
                 return;
             }
 
@@ -545,8 +560,14 @@
                 email: email
             };
 
+            // Disable input fields and button
+            emailField.disabled = true;
+            const submitButton = event.target.querySelector('button[type="submit"]');
+            submitButton.disabled = true;
+            document.getElementById('forgotPasswordSpinner').style.display = 'block';
+
             // Send form data to the API
-            fetch('https://yourapi.com/forgot-password', {
+            fetch('https://conext.in/admissions/api/request-password-reset/', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
@@ -556,16 +577,96 @@
             .then(response => response.json())
             .then(data => {
                 if (data.status) {
-                    alert("Password reset link has been sent to your email.");
+                    showToast("Password reset link has been sent to your email.", "success");
+                    document.getElementById('forgotPasswordForm').style.display = 'none';
+                    document.getElementById('resetPasswordForm').style.display = 'block';
                 } else {
-                    alert("Failed to send password reset link: " + data.message);
+                    showToast("Failed to send password reset link: " + data.message, "error");
                 }
             })
             .catch(error => {
                 console.error('Error:', error);
-                alert("An error occurred. Please try again.");
+                showToast("An error occurred. Please try again.", "error");
+            })
+            .finally(() => {
+                // Enable input fields and button
+                emailField.disabled = false;
+                submitButton.disabled = false;
+                document.getElementById('forgotPasswordSpinner').style.display = 'none';
             });
         });
+
+        document.getElementById('resetPasswordForm').addEventListener('submit', function(event) {
+            event.preventDefault();
+
+            const emailField = document.getElementById('email');
+            const otpField = document.getElementById('otp');
+            const newPasswordField = document.getElementById('newPassword');
+            const email = emailField.value.trim().toLowerCase();
+            const otp = otpField.value.trim();
+            const newPassword = newPasswordField.value.trim();
+
+            // Validate new password length
+            if (!otp || !newPassword || newPassword.length < 6) {
+                showToast("Please enter the OTP and a new password with at least 6 characters.", "error");
+                return;
+            }
+
+            const formData = {
+                email: email,
+                otp: otp,
+                new_password: newPassword
+            };
+
+            // Disable input fields and button
+            emailField.disabled = true;
+            otpField.disabled = true;
+            newPasswordField.disabled = true;
+            const submitButton = event.target.querySelector('button[type="submit"]');
+            submitButton.disabled = true;
+            document.getElementById('resetPasswordSpinner').style.display = 'block';
+
+            // Send form data to the API
+            fetch('https://conext.in/admissions/api/verify-otp-and-reset-password/', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify(formData)
+            })
+            .then(response => response.json())
+            .then(data => {
+                if (data.status) {
+                    showToast("Password has been reset successfully.", "success");
+                    window.location.href = '/login.html';
+                } else {
+                    showToast("Failed to reset password: " + data.message, "error");
+                }
+            })
+            .catch(error => {
+                console.error('Error:', error);
+                showToast("An error occurred. Please try again.", "error");
+            })
+            .finally(() => {
+                // Enable input fields and button
+                emailField.disabled = false;
+                otpField.disabled = false;
+                newPasswordField.disabled = false;
+                submitButton.disabled = false;
+                document.getElementById('resetPasswordSpinner').style.display = 'none';
+            });
+        });
+
+        function showToast(message, type) {
+          const toast = document.getElementById("toast");
+          toast.innerText = message;
+          toast.style.display = "block";
+          toast.style.backgroundColor = type === "success" ? "#4CAF50" : "#f44336";
+          toast.style.color = "#fff";
+          setTimeout(() => {
+            toast.style.display = "none";
+          }, 2000); // Set timeout to 2 seconds3
+        }
       </script>
 
   
@@ -589,4 +690,3 @@
   
     <!-- Mirrored from live.themewild.com/edubo/application-form.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 16 May 2024 05:26:42 GMT -->
   </html>
-  
