--- a/index.html
+++ b/index.html
@@ -96,6 +96,12 @@
                   <i class="far fa-search"></i>
                 </button>
               </div> -->
+              <div class="nav-right-btn mt-2">
+                <a href="login.html" class="theme-btn" style="padding: 8px 10px;">
+                 </span>Apply Now
+                </a>
+              </div>
+
               <button
                 class="navbar-toggler"
                 type="button"
